--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -249,7 +249,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="https://localhost:7111/Orders">訂單紀錄</a>
                         <a class="collapse-item" href="https://localhost:7111/OrderStatus/Index">出貨管理</a>
-                        @* <a class="collapse-item" href="#">請款/退款作業</a> *@
+                        <a class="collapse-item" href="https://localhost:7111/OrderDelivery/Index">出貨單列表</a>
                     </div>
                 </div>
             </li>
